# wmii

./: .gitignore  Makefile  config.mk  meson.build
cmd/menu/: dat.h
cmd/strut/: win.c
cmd/wmii/: dat.h
include/stuff/: util.h
lib/libbio/: bcat.c
lib/libstuff/: Makefile  map.c
lib/libstuff/util/: args.c
lib/libutf/: runestrchr.c  runestrrchr.c
libbio/: meson.build
libbio/src/: binit.c  brdstr.c
libfmt/: meson.build
libfmt/src/: fmt.c  strtod.c
libixp/: meson.build
libixp/include/: ixp.h
libregexp/: meson.build
libregexp/src/: plan9.h  regerror.c
libstuff/: meson.build
libstuff/include/stuff/: util.h
libstuff/src/x11/: x11.c
libutf/: meson.build  rune.3
libutf/include/: utf.h
libutf/src/: runestrcat.c  runestrcpy.c  runestrdup.c  runestrecpy.c  runestrlen.c  runestrncat.c
libwmii_hack/: meson.build
libwmii_hack/src/: hack.h  util.c  x11.c
man/: meson.build
mk/: wmii.mk
wikeyname/: meson.build
wimenu/: generate-bindings.sh  meson.build
wimenu/src/: dat.h
wistrut/: meson.build
wistrut/src/: dat.h  main.c
witray/: meson.build
wmii/: meson.build
wmii/src/: backtrace.c  dat.h  debug.h
wmii9menu/: meson.build
wmiir/: meson.build
