libstuff_sources = [
  'src/xext.c',
  'src/event/configurerequest.c',
  'src/event/mapnotify.c',
  'src/event/configurenotify.c',
  'src/event/expose.c',
  'src/event/selectionclear.c',
  'src/event/buttonpress.c',
  'src/event/selection.c',
  'src/event/focusin.c',
  'src/event/event.c',
  'src/event/destroynotify.c',
  'src/event/leavenotify.c',
  'src/event/keypress.c',
  'src/event/unmapnotify.c',
  'src/event/xtime.c',
  'src/event/keyrelease.c',
  'src/event/selectionrequest.c',
  'src/event/mappingnotify.c',
  'src/event/buttonrelease.c',
  'src/event/enternotify.c',
  'src/event/motionnotify.c',
  'src/event/reparentnotify.c',
  'src/event/clientmessage.c',
  'src/event/maprequest.c',
  'src/event/propertynotify.c',
  'src/event/ixp.c',
  'src/event/focusout.c',
  'src/map.c',
  'src/client_readconfig.c',
  'src/init_screens.c',
  'src/util/reinit.c',
  'src/util/uniq.c',
  'src/util/closeexec.c',
  'src/util/emallocz.c',
  'src/util/getint.c',
  'src/util/args.c',
  'src/util/pathsearch.c',
  'src/util/min.c',
  'src/util/max.c',
  'src/util/estrdup.c',
  'src/util/strend.c',
  'src/util/doublefork.c',
  'src/util/utflcpy.c',
  'src/util/nsec.c',
  'src/util/_die.c',
  'src/util/tokenize.c',
  'src/util/erealloc.c',
  'src/util/unmask.c',
  'src/util/unquote.c',
  'src/util/getulong.c',
  'src/util/stokenize.c',
  'src/util/strlcat.c',
  'src/util/trim.c',
  'src/util/getlong.c',
  'src/util/estrndup.c',
  'src/util/sxprint.c',
  'src/util/comm.c',
  'src/util/fatal.c',
  'src/util/getbase.c',
  'src/util/strlcatprint.c',
  'src/util/refree.c',
  'src/util/grep.c',
  'src/util/spawn3.c',
  'src/util/strcasestr.c',
  'src/util/join.c',
  'src/util/vsxprint.c',
  'src/util/vector.c',
  'src/util/emalloc.c',
  'src/util/mfatal.c',
  'src/util/spawn3l.c',
  'src/util/freelater.c',
  'src/geom/rect_haspoint_p.c',
  'src/geom/get_sticky.c',
  'src/geom/rect_intersect_p.c',
  'src/geom/rect_contains_p.c',
  'src/geom/rect_intersection.c',
  'src/geom/quadrant.c',
  'src/buffer.c',
  'src/clientutil.c',
  'src/printevent.c',
  'src/x11/xatom.c',
  'src/x11/keyboard/ungrabkeyboard.c',
  'src/x11/keyboard/grabkeyboard.c',
  'src/x11/images/freeimage.c',
  'src/x11/images/xftdrawable.c',
  'src/x11/images/allocimage.c',
  'src/x11/images/copyimage.c',
  'src/x11/focus/setfocus.c',
  'src/x11/focus/getfocus.c',
  'src/x11/selection.c',
  'src/x11/freestringlist.c',
  'src/x11/convpts.c',
  'src/x11/initdisplay.c',
  'src/x11/sendmessage.c',
  'src/x11/mouse/ungrabpointer.c',
  'src/x11/mouse/pointerscreen.c',
  'src/x11/mouse/translate.c',
  'src/x11/mouse/grabpointer.c',
  'src/x11/mouse/querypointer.c',
  'src/x11/mouse/warppointer.c',
  'src/x11/xft.c',
  'src/x11/drawing/setgccol.c',
  'src/x11/drawing/drawstring.c',
  'src/x11/drawing/drawline.c',
  'src/x11/drawing/fill.c',
  'src/x11/drawing/drawpoly.c',
  'src/x11/drawing/border.c',
  'src/x11/drawing/fillpoly.c',
  'src/x11/sendevent.c',
  'src/x11/errors.c',
  'src/x11/properties/changeproperty.c',
  'src/x11/properties/getproperty.c',
  'src/x11/properties/changeprop_ulong.c',
  'src/x11/properties/changeprop_textlist.c',
  'src/x11/properties/strlistdup.c',
  'src/x11/properties/delproperty.c',
  'src/x11/properties/getprop.c',
  'src/x11/properties/changeprop_string.c',
  'src/x11/properties/changeprop_short.c',
  'src/x11/properties/changeprop_long.c',
  'src/x11/properties/getprop_long.c',
  'src/x11/properties/getprop_textlist.c',
  'src/x11/properties/windowname.c',
  'src/x11/properties/changeprop_char.c',
  'src/x11/properties/getprop_string.c',
  'src/x11/colors/loadcolor.c',
  'src/x11/colors/parsecolor.c',
  'src/x11/colors/xftcolor.c',
  'src/x11/sync.c',
  'src/x11/geometry/subpt.c',
  'src/x11/geometry/divpt.c',
  'src/x11/geometry/mulpt.c',
  'src/x11/geometry/rectsetorigin.c',
  'src/x11/geometry/addpt.c',
  'src/x11/geometry/rectsubpt.c',
  'src/x11/geometry/eqrect.c',
  'src/x11/geometry/rectaddpt.c',
  'src/x11/geometry/eqpt.c',
  'src/x11/geometry/XRect.c',
  'src/x11/geometry/insetrect.c',
  'src/x11/ignored_xerrors.c',
  'src/x11/keys/parsekey.c',
  'src/x11/keys/keycode.c',
  'src/x11/windows/lowerwin.c',
  'src/x11/windows/reparentwindow.c',
  'src/x11/windows/createwindow.c',
  'src/x11/windows/setborder.c',
  'src/x11/windows/reshapewin.c',
  'src/x11/windows/createwindow_visual.c',
  'src/x11/windows/findwin.c',
  'src/x11/windows/sethandler.c',
  'src/x11/windows/window.c',
  'src/x11/windows/createwindow_rgba.c',
  'src/x11/windows/destroywindow.c',
  'src/x11/windows/setwinattr.c',
  'src/x11/windows/mapwin.c',
  'src/x11/windows/configwin.c',
  'src/x11/windows/movewin.c',
  'src/x11/windows/getwinrect.c',
  'src/x11/windows/unmapwin.c',
  'src/x11/windows/raisewin.c',
  'src/x11/windows/selectinput.c',
  'src/x11/text/textextents_l.c',
  'src/x11/text/freefont.c',
  'src/x11/text/labelh.c',
  'src/x11/text/textwidth.c',
  'src/x11/text/textwidth_l.c',
  'src/x11/text/loadfont.c',
  'src/x11/shape/setshapemask.c',
  'src/x11/insanity/sethints.c',
  'src/x11/insanity/gethints.c',
  'src/x11/insanity/gravitate.c',
  'src/x11/insanity/sizehint.c',
  'src/x11/x11.c',
  'src/fmt/fmtbuf.c',
  'src/fmt/vlprint.c',
  'src/fmt/lprint.c',
  'src/fmt/blprint.c',
  'src/fmt/bvlprint.c',
  'src/fmt/localelen.c',
  'src/fmt/localefmt.c',
]

libstuff_includes = include_directories('include')

libstuff_dependencies = [
  libbio_dep,
  libregexp_dep,
  libutf_dep,
  libfmt_dep,
  libixp_dep,
  xext_dep,
  xrender_dep,
]

libstuff = static_library(
  'stuff', libstuff_sources,
  include_directories : libstuff_includes,
  dependencies : libstuff_dependencies,
  install : false
)

libstuff_dep = declare_dependency(
  link_with : libstuff,
  include_directories : libstuff_includes,
)
